watershed-kernel/tests/compile_fail/skip_intent_recovery.stderr
error[E0599]: no method named `declare_claims` found for struct `Plan<Drafted>` in the current scope
 --> $WORKSPACE/tests/compile_fail/skip_intent_recovery.rs
  |
  |     let _plan = Plan::<Drafted>::draft().declare_claims(Vec::<FileClaim>::new());
  |                                          ^^^^^^^^^^^^^^ method not found in `Plan<Drafted>`
  |
  = note: the method was found for
          - `Plan<IntentRecovered>`
